# holcrawl

./: .gitattributes  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
holcrawl/: __init__.py  _version.py  compound_cmd.py  dataset.py  imdb_crawl.py  metacritic_crawl.py  shared.py  wiki_crawl.py
scripts/: dataset_cli.py  holcrawl_cli.py  imdb_cli.py  meta_cli.py  shared_options.py  wiki_cli.py
